try gc, back off

--- a/notebooks/profiling.ipynb
+++ b/notebooks/profiling.ipynb
@@ -82,49 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5f684e76-12a7-45b0-b02d-4195daab1fc9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 68.3 ms, sys: 1.02 ms, total: 69.3 ms\n",
-      "Wall time: 67.2 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[2.6000000e+02, 2.4300000e+02, 5.1270550e+01, 3.7729450e+01,\n",
-       "        2.0000000e+00],\n",
-       "       [5.8600000e+02, 1.8800000e+02, 7.7032590e+00, 5.3296741e+01,\n",
-       "        3.0000000e+00],\n",
-       "       [3.3000000e+02, 1.0600000e+02, 4.0839348e+01, 7.9160652e+01,\n",
-       "        2.0000000e+00],\n",
-       "       ...,\n",
-       "       [1.1660000e+03, 1.1600000e+03, 1.6534364e-01, 5.1909703e-01,\n",
-       "        3.5200000e+02],\n",
-       "       [1.1680000e+03, 1.1630000e+03, 9.5237836e-02, 3.8077080e-01,\n",
-       "        4.5500000e+02],\n",
-       "       [1.1670000e+03, 1.1690000e+03, 6.6283353e-02, 6.6283353e-02,\n",
-       "        5.8600000e+02]], dtype=float32)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "Z1 = anjl.canonical_nj(small_D)\n",
-    "Z1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -132,13 +89,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58 ms ± 8.42 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "54.3 ms ± 3.09 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
-    "Z1 = anjl.canonical_nj(small_D)"
+    "anjl.canonical_nj(small_D)"
    ]
   },
   {
@@ -151,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -161,7 +118,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3ff47662-e8e6-41a3-afe8-ff2a080455a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b8f012e9acb4a7ba89cd5fc1c7308b6",
+       "model_id": "c3e96251a5fb493a91027d4706b590ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,7 +168,7 @@
        "        3.0810000e+03]], dtype=float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,50 +185,26 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9cc05103-1ea4-4659-9265-6f42838f12f3",
+   "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.26 s, sys: 6.02 ms, total: 8.26 s\n",
-      "Wall time: 8.26 s\n"
+      "8.01 s ± 80.9 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.8810000e+03, 1.8700000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        2.0000000e+00],\n",
-       "       [1.8830000e+03, 3.0810000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        3.0000000e+00],\n",
-       "       [1.9040000e+03, 3.0820000e+03, 0.0000000e+00, 0.0000000e+00,\n",
-       "        4.0000000e+00],\n",
-       "       ...,\n",
-       "       [6.1570000e+03, 6.1540000e+03, 7.0959538e-02, 2.9235205e-01,\n",
-       "        2.0170000e+03],\n",
-       "       [6.1580000e+03, 6.1560000e+03, 5.2833185e-02, 7.6772496e-02,\n",
-       "        2.5630000e+03],\n",
-       "       [6.1490000e+03, 6.1590000e+03, 1.6368026e-01, 1.6368026e-01,\n",
-       "        3.0810000e+03]], dtype=float32)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "Z2 = anjl.canonical_nj(medium_D)\n",
-    "Z2"
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(medium_D)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "316ec457-3799-4843-80df-491956229101",
+   "id": "1fd81211-0772-4b79-904f-2b42b71184e4",
    "metadata": {},
    "outputs": [],
    "source": []
