--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -57,6 +57,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "93591185-ce1f-4989-9d7a-ba1bb74ea03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_Z_r = anjl.rapid_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -64,13 +74,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14 ms ± 287 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "2.44 ms ± 547 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
     "anjl.canonical_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ee0a0c08-c69a-43be-81c8-3cb5cede3a93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.78 ms ± 703 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.rapid_nj(small_D)"
    ]
   },
   {
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -93,7 +122,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3ff47662-e8e6-41a3-afe8-ff2a080455a5",
    "metadata": {},
    "outputs": [],
@@ -116,7 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "id": "d6cffbca-f3c3-41f5-8786-b56c0857934d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medium_Z_r = anjl.rapid_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -124,13 +163,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.6 ms ± 4.72 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "28.7 ms ± 4.2 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
     "anjl.canonical_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f7707bf3-a669-4da8-b608-23d0f4279d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.4 ms ± 2.19 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.rapid_nj(medium_D)"
    ]
   },
   {
@@ -143,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "72f69caf-89be-4751-8512-e9afb52d0c46",
    "metadata": {},
    "outputs": [
@@ -153,7 +211,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "ca50b544-a9c1-426f-8395-a710f568662c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eaf8a888ef540b9b7311701aebee9f5",
+       "model_id": "b9c3689cc7654482a26c591760bd69d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,14 +253,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "daa3c97f-0d09-4536-b2b7-1da5febd8d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7dbe2a01d87b4589b115bad61436075a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Compute neighbour-joining tree:   0%|          | 0/3080 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "large_Z = anjl.rapid_nj(\n",
+    "    large_D,\n",
+    "    progress=tqdm,\n",
+    "    progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "4790acc8-583f-4098-9c3f-86240691844f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.49 s ± 58.8 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit -r3 -n1\n",
     "anjl.canonical_nj(large_D)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "956a70ac-f1a1-4359-ad39-2aa4b1dbfbb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2 s ± 30.2 ms per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r10 -n1\n",
+    "anjl.rapid_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd2ce27a-d651-4bd2-a63d-65abd4d8b2bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
