rapid working but slow

--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "import zarr\n",
     "from scipy.spatial.distance import squareform\n",
-    "import anjl\n",
-    "from tqdm.auto import tqdm"
+    "import anjl"
    ]
   },
   {
@@ -74,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.68 ms ± 950 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "3.44 ms ± 468 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -93,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.67 ms ± 856 μs per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "9.18 ms ± 1.08 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -163,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.5 ms ± 3.12 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "41.7 ms ± 3.53 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -174,18 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f7707bf3-a669-4da8-b608-23d0f4279d3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "57.7 ms ± 3.56 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit -r20 -n1\n",
     "anjl.rapid_nj(medium_D)"
@@ -201,21 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "72f69caf-89be-4751-8512-e9afb52d0c46",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3081, 3081)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "large = zarr.load(\"../data/large/dist.zarr.zip\")\n",
     "large_D = squareform(large)\n",
@@ -224,97 +204,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ca50b544-a9c1-426f-8395-a710f568662c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fadf5cfa97fc4be0b4d2e9a6d90421e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute neighbour-joining tree:   0%|          | 0/3080 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "large_Z = anjl.canonical_nj(\n",
+    "large_Z, timings_canonical = anjl.canonical_nj(\n",
     "    large_D,\n",
-    "    progress=tqdm,\n",
-    "    progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
+    "    # progress=tqdm,\n",
+    "    # progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
+    "    diagnostics=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "daa3c97f-0d09-4536-b2b7-1da5febd8d1e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "847c7e0dea9d4a06af4e2048bbee8509",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute neighbour-joining tree:   0%|          | 0/3080 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "large_Z = anjl.rapid_nj(\n",
+    "large_Z, timings_rapid = anjl.rapid_nj(\n",
     "    large_D,\n",
-    "    progress=tqdm,\n",
-    "    progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
+    "    # progress=tqdm,\n",
+    "    # progress_options=dict(desc=\"Compute neighbour-joining tree\"),\n",
+    "    diagnostics=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "1662d98a-1197-4271-9514-6af1086abce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1866d6b-3d88-430b-912b-db10e3391437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_canonical = pd.DataFrame(\n",
+    "    {\n",
+    "        \"time\": timings_canonical,\n",
+    "        \"iteration\": np.arange(len(timings_canonical)),\n",
+    "        \"algorithm\": \"canonical\",\n",
+    "    }\n",
+    ")\n",
+    "df_canonical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cd68720-12d0-4995-b47f-85b831e9883a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_rapid = pd.DataFrame(\n",
+    "    {\n",
+    "        \"time\": timings_rapid,\n",
+    "        \"iteration\": np.arange(len(timings_rapid)),\n",
+    "        \"algorithm\": \"rapid\",\n",
+    "    }\n",
+    ")\n",
+    "df_rapid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23bed0c5-f5bd-4eb5-abcb-8524cdc9661c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "px.line(\n",
+    "    pd.concat([df_rapid, df_canonical], axis=0),\n",
+    "    x=\"iteration\",\n",
+    "    y=\"time\",\n",
+    "    color=\"algorithm\",\n",
+    "    template=\"simple_white\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4790acc8-583f-4098-9c3f-86240691844f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.14 s ± 32.1 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%timeit -r3 -n1\n",
+    "%%timeit -r2 -n1\n",
     "anjl.canonical_nj(large_D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "956a70ac-f1a1-4359-ad39-2aa4b1dbfbb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 s ± 25.5 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%timeit -r3 -n1\n",
+    "%%timeit -r2 -n1\n",
     "anjl.rapid_nj(large_D)"
    ]
   },
@@ -347,105 +346,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "15d8f5917af34f20a38a2c24b34e75b2": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "32a7ffcf817244c895e491fea0e7da6c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "4796757202ec4ad7b4e0f269fa74b457": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "4ef502b23658424b8a5d065fa23d50ac": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "78eb0c20c725435a95a1d5dd7ba87a32": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_15d8f5917af34f20a38a2c24b34e75b2",
-       "style": "IPY_MODEL_f9596949a76b40fca612c7ee3bef0cfa",
-       "value": "Compute neighbour-joining tree: 100%"
-      }
-     },
-     "8eaf8a888ef540b9b7311701aebee9f5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_78eb0c20c725435a95a1d5dd7ba87a32",
-        "IPY_MODEL_e8c56600901b42229243743d572d10dc",
-        "IPY_MODEL_ae5c7386ef4f4106ae1adf240f9a18ca"
-       ],
-       "layout": "IPY_MODEL_c1ead1c4a68143b094f50621183fd0e1"
-      }
-     },
-     "967b86a8fbb24ee1b95c52fe2496b93c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     },
-     "ae5c7386ef4f4106ae1adf240f9a18ca": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_4796757202ec4ad7b4e0f269fa74b457",
-       "style": "IPY_MODEL_967b86a8fbb24ee1b95c52fe2496b93c",
-       "value": " 3080/3080 [00:15&lt;00:00, 1044.31it/s]"
-      }
-     },
-     "c1ead1c4a68143b094f50621183fd0e1": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "e8c56600901b42229243743d572d10dc": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_4ef502b23658424b8a5d065fa23d50ac",
-       "max": 3080,
-       "style": "IPY_MODEL_32a7ffcf817244c895e491fea0e7da6c",
-       "value": 3080
-      }
-     },
-     "f9596949a76b40fca612c7ee3bef0cfa": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "HTMLStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
