--- a/notebooks/bench.ipynb
+++ b/notebooks/bench.ipynb
@@ -62,7 +62,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_Z_r = anjl.rapid_nj(small_D)"
+    "small_Z_r = anjl.rapid_nj(small_D, gc=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9070c6a2-f890-4352-8ae0-2faa97f100f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_Z_r = anjl.rapid_nj(small_D, gc=1)"
    ]
   },
   {
@@ -570,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl._rapid._rapid_nj_search.inspect_types()"
+    "# anjl._rapid._rapid_search.inspect_types()"
    ]
   },
   {
