--- a/data/create.ipynb
+++ b/data/create.ipynb
@@ -10,9 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "f40ed9f0-7e17-4f0b-9674-49c62c1de183",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import malariagen_data\n",
@@ -22,9 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "ed752379-6bcb-496f-9362-bd7dcf372a02",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -366,7 +370,7 @@
        "                        <th style=\"text-align: left\">\n",
        "                            Storage URL\n",
        "                        </th>\n",
-       "                        <td>gs://vo_agam_release_master_us_central1/</td>\n",
+       "                        <td>gs://vo_agam_release_master_us_central1</td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <th style=\"text-align: left\">\n",
@@ -378,7 +382,7 @@
        "                        <th style=\"text-align: left\">\n",
        "                            Results cache\n",
        "                        </th>\n",
-       "                        <td>/home/aliman/github/alimanfoo/anjl/data/results_cache</td>\n",
+       "                        <td>/home/jupyter/anjl/data/results_cache</td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <th style=\"text-align: left\">\n",
@@ -408,7 +412,7 @@
        "                        <th style=\"text-align: left\">\n",
        "                            Client location\n",
        "                        </th>\n",
-       "                        <td>England, United Kingdom</td>\n",
+       "                        <td>Iowa, United States (Google Cloud us-central1)</td>\n",
        "                    </tr>\n",
        "                </tbody>\n",
        "            </table>\n",
@@ -416,14 +420,14 @@
       ],
       "text/plain": [
        "<MalariaGEN Ag3 API client>\n",
-       "Storage URL             : gs://vo_agam_release_master_us_central1/\n",
+       "Storage URL             : gs://vo_agam_release_master_us_central1\n",
        "Data releases available : 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11\n",
-       "Results cache           : /home/aliman/github/alimanfoo/anjl/data/results_cache\n",
+       "Results cache           : /home/jupyter/anjl/data/results_cache\n",
        "Cohorts analysis        : 20240924\n",
        "AIM analysis            : 20220528\n",
        "Site filters analysis   : dt_20200416\n",
        "Software version        : malariagen_data 13.2.1\n",
-       "Client location         : England, United Kingdom\n",
+       "Client location         : Iowa, United States (Google Cloud us-central1)\n",
        "---\n",
        "Please note that data are subject to terms of use,\n",
        "for more information see https://www.malariagen.net/data\n",
@@ -431,7 +435,7 @@
        "https://malariagen.github.io/malariagen-data-python/v13.2.1/Ag3.html"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,9 +450,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "8a03644b-0882-4964-9f9a-8db277a316e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def create_data(\n",
@@ -478,15 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "bb4b03a8-1c46-4c4e-947e-cde7b6e83727",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "small: saved data for 181 samples\n"
+      "small: saved data for 181 samples    \n"
      ]
     }
    ],
@@ -496,57 +504,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "59fe54b2-73af-49fe-baa5-3b1e8c38f6ac",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                   \r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute SNP allele counts:   0%|          | 0/39 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            \r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute biallelic diplotypes:   0%|          | 0/47 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "medium: saved data for 472 samples         \n"
+      "medium: saved data for 472 samples   \n"
      ]
     }
    ],
@@ -565,57 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "f1def5bc-eb50-475a-b30f-1e1b83f1f170",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                   \r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute SNP allele counts:   0%|          | 0/250 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            \r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Compute biallelic diplotypes:   0%|          | 0/299 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "large: saved data for 3,081 samples        \n"
+      "large: saved data for 3,081 samples  \n"
      ]
     }
    ],
@@ -625,18 +553,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "0a47d7e4-15b6-4a5c-bbaf-d2776418e6ae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xl: saved data for 5,868 samples     \n"
+     ]
+    }
+   ],
+   "source": [
+    "create_data(key=\"xl\", sample_sets=[\"3.0\", \"3.1\", \"3.2\", \"3.3\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "55dd3884-78a0-4f13-b357-30057fa0b8f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xxl: saved data for 8,825 samples    \n"
+     ]
+    }
+   ],
+   "source": [
+    "create_data(key=\"xxl\", sample_sets=[\"3.0\", \"3.1\", \"3.2\", \"3.3\", \"3.4\", \"3.5\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5c238e93-ebfb-4cbd-83fa-a460ee5f7480",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xxxl: saved data for 15,036 samples  \n"
+     ]
+    }
+   ],
+   "source": [
+    "create_data(key=\"xxxl\", sample_sets=[\"3.0\", \"3.1\", \"3.2\", \"3.3\", \"3.4\", \"3.5\", \"3.6\", \"3.7\", \"3.8\"])"
+   ]
   }
  ],
  "metadata": {
+  "environment": {
+   "kernel": "conda-base-pixi-kernel-python3",
+   "name": "workbench-notebooks.m124",
+   "type": "gcloud",
+   "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m124"
+  },
   "kernelspec": {
    "display_name": "Pixi - Python 3 (ipykernel)",
    "language": "python",
-   "name": "pixi-kernel-python3"
+   "name": "conda-base-pixi-kernel-python3"
   },
   "language_info": {
    "codemirror_mode": {
