--- a/notebooks/plot.ipynb
+++ b/notebooks/plot.ipynb
@@ -633,8 +633,14 @@
   }
  ],
  "metadata": {
+  "environment": {
+   "kernel": "python3",
+   "name": "workbench-notebooks.m124",
+   "type": "gcloud",
+   "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m124"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "test-big-pca-2024-09-15",
    "language": "python",
    "name": "python3"
   },
@@ -648,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
