--- a/notebooks/profile.ipynb
+++ b/notebooks/profile.ipynb
@@ -56,23 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "8b6a001e-6e46-4c56-8c37-33ef5693d6e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0., 27., 16., ..., 25., 21., 19.],\n",
-       "       [27.,  0., 23., ..., 22., 30., 22.],\n",
-       "       [16., 23.,  0., ..., 25., 19., 17.],\n",
+       "array([[ 0., 38., 28., ..., 29., 26., 24.],\n",
+       "       [38.,  0., 28., ..., 35., 32., 24.],\n",
+       "       [28., 28.,  0., ..., 23., 28., 12.],\n",
        "       ...,\n",
-       "       [25., 22., 25., ...,  0., 30., 24.],\n",
-       "       [21., 30., 19., ..., 30.,  0., 20.],\n",
-       "       [19., 22., 17., ..., 24., 20.,  0.]], dtype=float32)"
+       "       [29., 35., 23., ...,  0., 29., 19.],\n",
+       "       [26., 32., 28., ..., 29.,  0., 24.],\n",
+       "       [24., 24., 12., ..., 19., 24.,  0.]], dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,14 +80,14 @@
    "source": [
     "large = zarr.load(\"../data/large/dist.zarr.zip\")\n",
     "large_D = squareform(large)\n",
-    "shuffle = np.random.choice(large_D.shape[0], size=500, replace=False)\n",
+    "shuffle = np.random.choice(large_D.shape[0], size=1000, replace=False)\n",
     "large_D_shuffled = large_D.take(shuffle, axis=0).take(shuffle, axis=1)\n",
     "large_D_shuffled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "a3c13257-4c9c-4310-a45b-79058918bea4",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 175 ms, sys: 0 ns, total: 175 ms\n",
-      "Wall time: 174 ms\n"
+      "CPU times: user 233 ms, sys: 105 μs, total: 233 ms\n",
+      "Wall time: 231 ms\n"
      ]
     }
    ],
@@ -107,94 +107,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0889365c-223e-439e-896b-b1e6fd3707bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 534 ms, sys: 0 ns, total: 534 ms\n",
-      "Wall time: 533 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "large_Z = anjl.rapid_nj(large_D_shuffled, gc=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "e5c44b72-6d4a-496c-8b98-3a0ac39ae722",
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%snakeviz\n",
-    "# anjl.canonical_nj(large_D_shuffled)\n",
-    "# anjl.rapid_nj(large_D_shuffled, gc=100)"
+    "# anjl.canonical_nj(large_D_shuffled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "74987835-ee0a-403b-86a8-db2859f88cfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%snakeviz\n",
-    "# anjl.rapid_nj(large_D_shuffled, gc=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "0df09dd4-e47b-45ab-b368-0dbc303ead9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.8000000e+02, 4.5800000e+02, 3.3815260e+00, 6.6184740e+00,\n",
+       "array([[6.0400000e+02, 8.3400000e+02, 9.9699396e-01, 3.0060119e-03,\n",
        "        2.0000000e+00],\n",
-       "       [1.9900000e+02, 2.2400000e+02, 8.8531184e-01, 1.1146882e+00,\n",
+       "       [9.8000000e+01, 1.1700000e+02, 0.0000000e+00, 0.0000000e+00,\n",
        "        2.0000000e+00],\n",
-       "       [3.4800000e+02, 4.4900000e+02, 9.1733873e-01, 1.0826613e+00,\n",
-       "        2.0000000e+00],\n",
+       "       [7.3600000e+02, 1.0010000e+03, 0.0000000e+00, 0.0000000e+00,\n",
+       "        3.0000000e+00],\n",
        "       ...,\n",
-       "       [9.9300000e+02, 9.9500000e+02, 1.0816996e-01, 8.3526894e-02,\n",
-       "        1.9900000e+02],\n",
-       "       [9.9400000e+02, 9.9600000e+02, 8.7903276e-02, 3.3321455e-02,\n",
-       "        4.0500000e+02],\n",
-       "       [9.9100000e+02, 9.9700000e+02, 6.6971444e-02, 6.6971444e-02,\n",
-       "        5.0000000e+02]], dtype=float32)"
+       "       [1.9780000e+03, 1.9830000e+03, 2.6133865e-01, 2.8120428e-01,\n",
+       "        1.0300000e+02],\n",
+       "       [1.9950000e+03, 1.9960000e+03, 7.0536315e-02, 2.6785880e-02,\n",
+       "        5.1200000e+02],\n",
+       "       [1.9920000e+03, 1.9970000e+03, 5.9355550e-02, 5.9355550e-02,\n",
+       "        1.0000000e+03]], dtype=float32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/markdown": [
-       "**Elapsed:** 9.595 seconds\n",
+       "**Elapsed:** 6.006 seconds\n",
        "\n",
-       "**Total samples:** 675 (80.9% non-Numba samples, 0.0% bad samples)\n",
+       "**Total samples:** 429 (4.2% non-Numba samples, 0.0% bad samples)\n",
        "\n",
-       "/home/aliman/github/alimanfoo/anjl/anjl/_canonical.py (lines 188 to 196):\n",
+       "/home/aliman/github/alimanfoo/anjl/anjl/_canonical.py (lines 136 to 219):\n",
        "\n",
        "```\n",
-       "  1.5% |         for j in range(i):\n",
-       "       |             visited += 1\n",
-       "  5.3% |             if obsolete[j]:\n",
+       "  0.2% |     Z[iteration, 4] = leaves_i + leaves_j\n",
+       "       | \n",
+       "       |     if n_remaining > 2:\n",
+       "       |         # Update data structures.\n",
+       "       |         _canonical_update(\n",
+       "       |             D=D,\n",
+       "       |             U=U,\n",
+       "       |             index_to_id=index_to_id,\n",
+       "       |             obsolete=obsolete,\n",
+       "       |             node=node,\n",
+       "       |             i_min=i_min,\n",
+       "       |             j_min=j_min,\n",
+       "       |             d_ij=d_ij,\n",
+       "       |         )\n",
+       "       | \n",
+       "       | \n",
+       "       | @numba.njit\n",
+       "       | def _canonical_search(\n",
+       "       |     D: np.ndarray, U: np.ndarray, obsolete: np.ndarray, n: int\n",
+       "       | ) -> tuple[int, int]:\n",
+       "       |     # Search for the closest pair of neighbouring nodes to join.\n",
+       "       |     q_min = numba.float32(np.inf)\n",
+       "       |     i_min = -1\n",
+       "       |     j_min = -1\n",
+       "       |     coefficient = numba.float32(n - 2)\n",
+       "       |     m = D.shape[0]\n",
+       "  0.9% |     for i in range(m):\n",
+       "  0.5% |         if obsolete[i]:\n",
+       "       |             continue\n",
+       "       |         u_i = U[i]\n",
+       " 13.8% |         for j in range(i):\n",
+       " 17.7% |             if obsolete[j]:\n",
        "       |                 continue\n",
        "       |             u_j = U[j]\n",
        "       |             d = D[i, j]\n",
-       "  7.4% |             q = coefficient * d - u_i - u_j\n",
-       "  0.9% |             searched += 1\n",
-       "  4.0% |             if q < q_min:\n",
+       " 32.9% |             q = coefficient * d - u_i - u_j\n",
+       " 25.9% |             if q < q_min:\n",
+       "       |                 q_min = q\n",
+       "       |                 i_min = i\n",
+       "       |                 j_min = j\n",
+       "       |     return i_min, j_min\n",
+       "       | \n",
+       "       | \n",
+       "       | @numba.njit\n",
+       "       | def _canonical_update(\n",
+       "       |     D: np.ndarray,\n",
+       "       |     U: np.ndarray,\n",
+       "       |     index_to_id: np.ndarray,\n",
+       "       |     obsolete: np.ndarray,\n",
+       "       |     node: int,\n",
+       "       |     i_min: int,\n",
+       "       |     j_min: int,\n",
+       "       |     d_ij: float,\n",
+       "       | ) -> None:\n",
+       "       |     # Here we obsolete the row and column corresponding to the node at j_min, and we\n",
+       "       |     # reuse the row and column at i_min for the new node.\n",
+       "       |     obsolete[j_min] = True\n",
+       "       |     index_to_id[i_min] = node\n",
+       "       | \n",
+       "       |     # Subtract out the distances for the nodes that have just been joined.\n",
+       "  0.2% |     U -= D[i_min]\n",
+       "       |     U -= D[j_min]\n",
+       "       | \n",
+       "       |     # Initialize divergence for the new node.\n",
+       "       |     u_new = np.float32(0)\n",
+       "       | \n",
+       "       |     # Update distances and divergence.\n",
+       "  0.5% |     for k in range(D.shape[0]):\n",
+       "  0.5% |         if obsolete[k] or k == i_min or k == j_min:\n",
+       "       |             continue\n",
+       "       | \n",
+       "       |         # Distance from k to the new node.\n",
+       "       |         d_ik = D[i_min, k]\n",
+       "       |         d_jk = D[j_min, k]\n",
+       "  0.2% |         d_k = 0.5 * (d_ik + d_jk - d_ij)\n",
+       "  0.9% |         D[i_min, k] = d_k\n",
+       "  1.2% |         D[k, i_min] = d_k\n",
+       "  0.2% |         U[k] += d_k\n",
+       "       | \n",
+       "       |         # Accumulate divergence for the new node.\n",
+       "       |         u_new += d_k\n",
+       "       | \n",
+       "       |     # Assign divergence for the new node.\n",
+       "  0.2% |     U[i_min] = u_new\n",
        "```\n"
       ],
       "text/plain": [
@@ -208,140 +251,6 @@
    "source": [
     "%%profila\n",
     "anjl.canonical_nj(large_D_shuffled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "619a9949-e825-48c3-9de6-7e62d2b026ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.8000000e+02, 4.5800000e+02, 3.3815260e+00, 6.6184740e+00,\n",
-       "        2.0000000e+00],\n",
-       "       [1.9900000e+02, 2.2400000e+02, 8.8531184e-01, 1.1146882e+00,\n",
-       "        2.0000000e+00],\n",
-       "       [3.4800000e+02, 4.4900000e+02, 9.1733873e-01, 1.0826613e+00,\n",
-       "        2.0000000e+00],\n",
-       "       ...,\n",
-       "       [9.9300000e+02, 9.9500000e+02, 1.0816996e-01, 8.3526894e-02,\n",
-       "        1.9900000e+02],\n",
-       "       [9.9400000e+02, 9.9600000e+02, 8.7903276e-02, 3.3321455e-02,\n",
-       "        4.0500000e+02],\n",
-       "       [9.9100000e+02, 9.9700000e+02, 6.6971444e-02, 6.6971444e-02,\n",
-       "        5.0000000e+02]], dtype=float32)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Elapsed:** 32.263 seconds\n",
-       "\n",
-       "**Total samples:** 2538 (90.9% non-Numba samples, 0.0% bad samples)\n",
-       "\n",
-       "/home/aliman/github/alimanfoo/anjl/anjl/_rapid.py (lines 272 to 352):\n",
-       "\n",
-       "```\n",
-       "       |     # Initialize working variables.\n",
-       "       |     q_min = numba.float32(np.inf)\n",
-       "       |     threshold = numba.float32(np.inf)\n",
-       "       |     i_min = -1\n",
-       "       |     j_min = -1\n",
-       "       |     searched = 0\n",
-       "       |     visited = 0\n",
-       "       |     coefficient = numba.float32(n_remaining - 2)\n",
-       "       |     m = nodes_sorted.shape[0]\n",
-       "       |     # n = nodes_sorted.shape[1]\n",
-       "       | \n",
-       "       |     # # First pass, scan down first values.\n",
-       "       |     # for i in range(m):\n",
-       "       |     #     if obsolete[i]:\n",
-       "       |     #         continue\n",
-       "       |     #     u_i = U[i]\n",
-       "       |     #     id_j = nodes_sorted[i, 0]\n",
-       "       |     #     if clustered[id_j]:\n",
-       "       |     #         continue\n",
-       "       |     #     j = id_to_index[id_j]\n",
-       "       |     #     u_j = U[j]\n",
-       "       |     #     d = D[i, j]\n",
-       "       |     #     q = coefficient * d - u_i - u_j\n",
-       "       |     #     if q < q_min:\n",
-       "       |     #         q_min = q\n",
-       "       |     #         threshold = q_min + u_max\n",
-       "       |     #         i_min = i\n",
-       "       |     #         j_min = j\n",
-       "       | \n",
-       "       |     # indices_available = np.nonzero(~obsolete)[0]\n",
-       "       |     # # np.random.shuffle(indices_available)\n",
-       "       |     # for i in indices_available:\n",
-       "       | \n",
-       "       |     # Search all values up to threshold.\n",
-       "       |     for i in range(m):\n",
-       "       |         # Skip if row is no longer in use.\n",
-       "  0.1% |         if obsolete[i]:\n",
-       "       |             continue\n",
-       "       | \n",
-       "       |         # # Obtain identifier for this row.\n",
-       "       |         # id_i = index_to_id[i]\n",
-       "       | \n",
-       "       |         # Obtain divergence for node corresponding to this row.\n",
-       "       |         u_i = U[i]\n",
-       "       | \n",
-       "       |         # Search the row up to threshold.\n",
-       "  1.1% |         for node in nodes_sorted[i]:\n",
-       "       |             visited += 1\n",
-       "       | \n",
-       "       |             # # Obtain node identifier for the current item.\n",
-       "       |             # id_j = nodes_sorted[i, s]\n",
-       "       | \n",
-       "       |             # Skip if this node is already clustered.\n",
-       "  1.6% |             if clustered[node]:\n",
-       "       |                 continue\n",
-       "       | \n",
-       "       |             # Break at end of nodes.\n",
-       "       |             if node < 0:\n",
-       "       |                 break\n",
-       "       | \n",
-       "       |             # Obtain column index in the distance matrix.\n",
-       "       |             j = id_to_index[node]\n",
-       "       | \n",
-       "       |             # Partially calculate q.\n",
-       "  0.6% |             d = D[i, j]\n",
-       "  3.5% |             q_partial = coefficient * d - u_i\n",
-       "       | \n",
-       "       |             # Limit search. Because the row is sorted, if we are already above this\n",
-       "       |             # threshold then we know there is no need to search remaining nodes in the\n",
-       "       |             # row.\n",
-       "  0.6% |             if q_partial > threshold:\n",
-       "       |                 break\n",
-       "       | \n",
-       "       |             # Fully calculate q.\n",
-       "  0.3% |             u_j = U[j]\n",
-       "  0.1% |             q = q_partial - u_j\n",
-       "  0.4% |             searched += 1\n",
-       "       | \n",
-       "  0.4% |             if q < q_min:\n",
-       "       |                 q_min = q\n",
-       "  0.3% |                 threshold = q_min + u_max\n",
-       "```\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%profila\n",
-    "anjl.rapid_nj(large_D_shuffled, gc=100)"
    ]
   },
   {
